Change author to me! :)

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "license":     "MIT",
   "authors": [
     {
-      "name": "Ross Tuck",
-      "homepage": "http://tactician.thephpleague.com"
+      "name": "Nigel Greenway",
+      "homepage": "http://futurepixels.co.uk"
     }
   ],
   "require": {
