--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,7 @@
         >
 
     <testsuites>
-        <testsuite name="Test_Suite">
+        <testsuite name="Tactician Container Test Suite">
             <directory>./tests/</directory>
         </testsuite>
     </testsuites>
