--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.5",
-        "league/tactician": "^0.5@dev",
+        "league/tactician": "^0.5",
         "league/container": "~1.3"
     },
     "require-dev": {
