--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
     "require": {
         "php": ">=5.5",
         "league/tactician": "^0.6",
-        "league/container": "~1.3"
+        "container-interop/container-interop": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.3",
-        "squizlabs/php_codesniffer": "~2.0"
+        "squizlabs/php_codesniffer": "~2.0",
+        "league/container": "~2.0"
     },
     "autoload": {
         "psr-4": {
