--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name":        "league/tactician-container",
-    "description": "Tactician integration with container implementing the container-interop interface",
+    "description": "Tactician integration for any container implementing the container-interop interface",
     "keywords":    ["tactician", "di", "container", "league", "container-interop", "interoperable"],
     "license":     "MIT",
     "authors": [
