--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     "require": {
         "php": ">=5.5",
         "league/tactician": "^1.0",
-        "psr/container": "^1.0"
+        "psr/container": "~2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.3",
         "squizlabs/php_codesniffer": "~2.0",
-        "league/container": "~2.3"
+        "league/container": "~4.0"
     },
     "autoload": {
         "psr-4": {
